# python-ci

./: .coverage  README.md  coverage.xml  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: code-quality.yml
tests/python-ci/: test_init.py
